# configs

./: .bashrc  .gitconfig  .profile  .tmux.conf  .tmux.conf.local  .zshrc  README.md  init.vim
.cargo/: config
.config/: cm.conf  compton.conf  starship.toml
.config/alacritty/: alacritty.yml
.config/dunst/: dunstrc
.config/dunst_hypr/: Wall-Dcol.conf  dunstrc
.config/dunst_hypr/dunst/: Wall-Dcol.conf  dunstrc
.config/fish/: config.fish  fish_plugins  fish_variables
.config/hypr/: animations.conf  hyprland.conf  keybindings.conf  nvidia.conf  theme.ctl  windowrules.conf
.config/hypr/scripts/: globalcontrol.sh
.config/hypr/themes/: Catppuccin-Mocha.conf  Wall-Dcol.conf  colors.conf  theme.conf
.config/kitty/: kitty.conf
.config/kitty/themes/: theme.conf
.config/nvim/: .netrwhist  coc-settings.json  filetype.vim  init.vim
.config/nvim-latest/: init.lua
.config/nvim-latest/lua/: autocommands.lua  keymaps.lua  options.lua  plugins.lua
.config/nvim-lazy/: lazy-lock.json
.config/nvim-lazy/lua/: autogroups.lua  keymaps.lua  lazy_bootstrap.lua  utils.lua
.config/nvim-lsp/: init.lua
.config/nvim-lsp-basic/: config.lua  init.lua
.config/nvim-lsp-new/: init.lua
.config/nvim-lunar/: config.lua  init.lua  setting
.config/waybar/: config.ctl  config.jsonc
.i3/: config  for_two_monitors
.vim/: .netrwhist
.vim/sessions/: default.vim
Templates/cpp-template/: .clang-format  .gitignore  CMakeLists.txt  build.sh  make.sh
Templates/cpp-template/src/: main.cpp
bins/: clang-format.py  create-cpp-project.sh  restart_udevd.sh
(+120 files in other folders)
